--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 		var state=urlDetail.searchParams.get("state");
 
 		if(code!=='' && code!=null && state!=='' && state!=null){
-			let newUrl=state+'?code='+code;
+			var values = state.split(",");
+			let newUrl=values[0]+'?code='+code;
+			if(values.length==2){
+			    newUrl=newUrl+'?mode='+values[1];
+			}
 			console.log(newUrl);
 			window.location.replace(newUrl);
 		}
